<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient_screen_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/_5sdp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient_screen_splash"
            tools:context=".activity.ui.home.HomeFragment">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/splash_screen_main_heading"
                    android:textSize="@dimen/_25sdp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/splash_screen_sub_heading"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/search_book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_search_24"
                    android:hint="@string/book_title"
                    android:textColorHint="@color/light_gray"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:imeOptions="actionSearch"
                    android:background="@drawable/rounded_corners_edit_text"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginVertical="@dimen/_10sdp"/>
                <!--<EditText
                    android:id="@+id/search_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/location"
                    android:hint="@string/book_title"
                    android:textColorHint="@color/light_gray"
                    android:textColor="@color/black"
                    android:autofillHints=""
                    android:inputType="textPostalAddress"
                    android:background="@drawable/rounded_corners_edit_text"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp"
                    />-->
                <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/search_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/location"
                    android:hint="@string/book_location"
                    android:textColorHint="@color/light_gray"
                    android:textColor="@color/black"
                    android:imeOptions="actionSearch"
                    android:popupBackground="@color/white"
                    android:inputType="textPostalAddress"
                    android:background="@drawable/rounded_corners_edit_text"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginVertical="@dimen/_20sdp">
                    <TextView
                        android:id="@+id/school_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/school"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:layout_marginHorizontal="@dimen/_12sdp"
                        android:background="@drawable/circular_shaped_otp" />
                    <TextView
                        android:id="@+id/matric_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matric"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:layout_marginHorizontal="@dimen/_12sdp"
                        android:background="@drawable/circular_shaped_otp" />
                    <TextView
                        android:id="@+id/inter_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Inter"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:layout_marginHorizontal="@dimen/_12sdp"
                        android:background="@drawable/circular_shaped_otp" />
                    <TextView
                        android:id="@+id/other_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:textColor="@color/red"
                        android:gravity="center"
                        android:layout_marginHorizontal="@dimen/_12sdp"
                        android:background="@drawable/circular_shaped_otp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/paid_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:orientation="horizontal"
                    app:reverseLayout="true" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/donations"
                    android:textSize="@dimen/_10sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/white" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/free_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:orientation="horizontal"
                    app:reverseLayout="true" />

            </LinearLayout>



        </FrameLayout>

    </ScrollView>
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"/>
</RelativeLayout>
