<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_screen_splash"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.ViewProfileActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:gravity="center" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3">
        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:id="@+id/frameLayout_image_activity_profile">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePicViewActivityProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profile_pic"
                android:layout_gravity="bottom|center_horizontal" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/profile_view_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:textColorHint="@color/light_gray"
        android:background="@drawable/rounded_corners_edit_text"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:paddingVertical="@dimen/_3sdp"
        android:paddingStart="@dimen/_6sdp"/>
    <TextView
        android:id="@+id/profile_view_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:layout_marginVertical="@dimen/_5sdp"
        android:hint="@string/phoneNumber"
        android:layout_weight="1"
        android:textColorHint="@color/light_gray"
        android:background="@drawable/rounded_corners_edit_text"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_3sdp"
        android:paddingStart="@dimen/_6sdp"/>
    <TextView
        android:id="@+id/profile_view_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:layout_marginVertical="@dimen/_5sdp"
        android:hint="@string/email"
        android:layout_weight="1"
        android:textColorHint="@color/light_gray"
        android:background="@drawable/rounded_corners_edit_text"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_3sdp"
        android:paddingStart="@dimen/_6sdp"/>
    <TextView
        android:id="@+id/profile_view_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:layout_marginVertical="@dimen/_5sdp"
        android:hint="Location"
        android:layout_weight="1"
        android:textColorHint="@color/light_gray"
        android:background="@drawable/rounded_corners_edit_text"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_3sdp"
        android:paddingStart="@dimen/_6sdp"/>

</LinearLayout>